--- a/nouvelleTechno/public/css/tailwind.css
+++ b/nouvelleTechno/public/css/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    input {
+        @apply bg-gray-50 border border-gray-300 text-sm rounded-lg block w-full p-2.5;
+    }
+    label {
+        @apply block mb-2 text-sm font-medium text-gray-500;
+    }
+}
